# debug-toolbar

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.rst  Makefile  PLAN.md  README.md  biome.json  package.json  pyproject.toml
.claude/: MCP-SETUP.md  mcp-strategy.md
.claude/agents/: docs-vision.md  expert.md  testing.md
.claude/commands/: bootstrap.md  explore.md  fix-issue.md  implement.md  prd.md  review.md  test.md
.claude/skills/advanced-alchemy/: README.md
.claude/skills/litestar/: README.md
.claude/skills/pytest/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: DOCS.yml  config.yml
.github/workflows/: cd.yml  ci.yml  docs.yml  pages-deploy.yml  publish.yml
docs/: changelog.md  comparison.md  conf.py  configuration.md  index.md  mcp.md  panels.md
docs/api/: index.md
docs/api/_autosummary/: debug_toolbar.core.panels.headers.rst  debug_toolbar.core.panels.profiling.rst  debug_toolbar.core.panels.rst  debug_toolbar.core.panels.versions.rst  debug_toolbar.litestar.routes.handlers.rst  debug_toolbar.litestar.routes.rst  debug_toolbar.litestar.rst
docs/architecture/: ARCHITECTURE.md
examples/: __init__.py  alerts_panel_example.py  async_profiler_example.py  cache_panel_demo.py  flamegraph_example.py  graphql_panel_example.py  mcp_server_example.py  memory_panel_example.py  profiling_panel_example.py  settings_panel_example.py  templates_panel_example.py  websocket_panel_example.py
examples/asgi_basic/: __init__.py  app.py
examples/fastapi_basic/: app.py
examples/litestar_advanced_alchemy/: __init__.py  app.py  models.py
examples/litestar_basic/: __init__.py  app.py
examples/shared/static/: main.js  style.css
examples/starlette_basic/: app.py
pr-preview/pr-10/_sources/: index.md.txt
pr-preview/pr-11/: panels.html
pr-preview/pr-11/.doctrees/: comparison.doctree  getting-started.doctree  index.doctree
pr-preview/pr-12/: .buildinfo  genindex.html  objects.inv  searchindex.js
pr-preview/pr-12/_sources/: configuration.md.txt
pr-preview/pr-14/: panels.html  searchindex.js
pr-preview/pr-14/.doctrees/: index.doctree
pr-preview/pr-14/_modules/: index.html
pr-preview/pr-14/api/: index.html
pr-preview/pr-14/architecture/: index.html
pr-preview/pr-15/: getting-started.html
pr-preview/pr-15/.doctrees/: panels.doctree
pr-preview/pr-15/_sources/: index.md.txt
pr-preview/pr-16/: comparison.html  configuration.html  custom-panels.html  genindex.html  index.html  objects.inv
pr-preview/pr-16/architecture/: ARCHITECTURE.html
pr-preview/pr-18/: changelog.html  genindex.html  objects.inv  searchindex.js
pr-preview/pr-18/.doctrees/: changelog.doctree
pr-preview/pr-18/_modules/: index.html
pr-preview/pr-18/_sources/: changelog.md.txt
pr-preview/pr-19/: comparison.html  genindex.html  objects.inv  panels.html  searchindex.js
pr-preview/pr-19/.doctrees/: index.doctree
pr-preview/pr-20/: getting-started.html  index.html  searchindex.js
pr-preview/pr-20/.doctrees/: getting-started.doctree
pr-preview/pr-20/_sources/: index.md.txt
pr-preview/pr-21/: mcp.html
pr-preview/pr-22/: py-modindex.html
pr-preview/pr-23/.doctrees/: changelog.doctree  comparison.doctree
pr-preview/pr-24/_sources/: changelog.md.txt
pr-preview/pr-3/: configuration.html  custom-panels.html  genindex.html  getting-started.html  index.html  objects.inv  panels.html  py-modindex.html  searchindex.js
pr-preview/pr-3/_modules/: index.html
pr-preview/pr-3/api/: index.html
pr-preview/pr-3/architecture/: ARCHITECTURE.html
pr-preview/pr-33/: changelog.html  searchindex.js
pr-preview/pr-33/.doctrees/: changelog.doctree
pr-preview/pr-35/: changelog.html  searchindex.js
pr-preview/pr-35/.doctrees/: changelog.doctree
pr-preview/pr-35/_sources/: comparison.md.txt  panels.md.txt
pr-preview/pr-37/: search.html
pr-preview/pr-37/_sources/: mcp.md.txt
pr-preview/pr-39/.doctrees/: custom-panels.doctree  mcp.doctree
pr-preview/pr-4/: .buildinfo  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  searchindex.js
pr-preview/pr-4/_sources/: index.md.txt
pr-preview/pr-4/api/: index.html
pr-preview/pr-4/architecture/: ARCHITECTURE.html
pr-preview/pr-40/: .buildinfo  configuration.html
pr-preview/pr-41/: custom-panels.html
pr-preview/pr-43/_sources/: getting-started.md.txt
pr-preview/pr-44/: genindex.html  searchindex.js
pr-preview/pr-44/.doctrees/: changelog.doctree
pr-preview/pr-45/: objects.inv
pr-preview/pr-45/.doctrees/: panels.doctree
pr-preview/pr-45/_sources/: configuration.md.txt
pr-preview/pr-45/api/: index.html
pr-preview/pr-45/architecture/: ARCHITECTURE.html
pr-preview/pr-46/: changelog.html
pr-preview/pr-46/.doctrees/: configuration.doctree  index.doctree
pr-preview/pr-46/_modules/: index.html
pr-preview/pr-46/_sources/: custom-panels.md.txt  index.md.txt
pr-preview/pr-47/: getting-started.html
pr-preview/pr-5/: configuration.html  custom-panels.html  genindex.html  objects.inv  panels.html  search.html  searchindex.js
pr-preview/pr-6/: comparison.html  configuration.html  custom-panels.html  genindex.html  getting-started.html  index.html  objects.inv  panels.html  py-modindex.html  search.html  searchindex.js
pr-preview/pr-6/api/: index.html
pr-preview/pr-7/: index.html  searchindex.js
pr-preview/pr-8/: index.html  objects.inv  panels.html
pr-preview/pr-9/: index.html  searchindex.js
specs/guides/: quality-gates.yaml
src/debug_toolbar/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_litestar_middleware.py  test_settings_panel_integration.py  test_toolbar_routes.py  test_websocket_integration.py
tests/unit/: __init__.py  test_alerts_panel.py  test_cache_panel.py  test_config.py  test_context.py  test_events_panel.py  test_flamegraph.py  test_headers_panel.py  test_litestar_config.py  test_memory_panel.py  test_panels.py  test_profiling_panel.py  test_settings_panel.py  test_sqlalchemy_panel.py  test_storage.py  test_templates_panel.py  test_toolbar.py  test_toolbar_edge_cases.py
(+490 files in other folders)
